remove carousel modal

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
 .cookie-module_container__2EZI7 {
 	display: none !important;
 }
+
+.zenHeroCarousel-module_zenContainer__3ymmy {
+	display: none !important;
+}
