--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,6 @@
 	display: none !important;
 }
 
-.zenHeroCarousel-module_zenContainer__3ymmy {
+.zenHeroCarousel-module_zenContainer__3ymmy, .zenHeroCarousel-module_zenContent__1iR4G {
 	display: none !important;
 }
