--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,9 @@
 	display: none !important;
 }
 
-.zenHeroCarousel-module_zenContainer__3ymmy {
+/* .zenHeroCarousel-module_zenContainer__3ymmy {
 	display: none !important;
-}
+} */
 
 .zenHeroCarousel-module_zenContent__1iR4G {
 	border: 10px solid red;
