--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
 }
 
 
-.zenHeroCarousel-module_zenContent__1iR4G .slider.animated {
+/* .zenHeroCarousel-module_zenContent__1iR4G .slider.animated {
 	transform: none !important;
 	transition: none !important;
-}
+} */
