--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 .zenHeroCarousel-module_zenContent__1iR4G {
 	border: 10px solid red !important;
 	height: 400px !important;
-	overflow: visible !important;
+	/* overflow: visible !important; */
 }
 
 
