--- a/public/style.css
+++ b/public/style.css
@@ -4,12 +4,14 @@
 
 .zenHeroCarousel-module_zenContent__1iR4G {
 	border: 10px solid red !important;
-	height: 400px !important;
+	/* height: 400px !important; */
 	/* overflow: visible !important; */
+	position: static !important;
 }
 
 
-/* .zenHeroCarousel-module_zenContent__1iR4G .slider.animated {
-	transform: none !important;
-	transition: none !important;
-} */
+.zenHeroCarousel-module_zenContent__1iR4G .slider.animated {
+	/* transform: none !important;
+	transition: none !important; */
+	position: static !important;
+}
