--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,9 @@
 
 .zenHeroCarousel-module_zenContent__1iR4G {
 	border: 10px solid red !important;
-	height: 400px !important;
+	height: 1000px !important;
 	/* overflow: visible !important; */
-	position: static !important;
+	/* position: static !important; */
 }
 
 
