--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,8 @@
 }
 
 .zenHeroCarousel-module_zenContent__1iR4G {
-	border: 10px solid red !important;
-	height: 1400px !important;
+	/* border: 10px solid red !important; */
+	/* height: 1400px !important; */
 	/* overflow: visible !important; */
 	position: static !important;
 }
@@ -14,5 +14,5 @@
 	/* transform: none !important;
 	transition: none !important; */
 	position: static !important;
-	height: 1400px !important;
+	/* height: 1400px !important; */
 }
