--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 
 .zenHeroCarousel-module_zenContent__1iR4G {
 	/* border: 10px solid red !important; */
-	/* height: 1400px !important; */
+	height: 648px !important;
 	/* overflow: visible !important; */
 	position: static !important;
 }
@@ -14,5 +14,5 @@
 	/* transform: none !important;
 	transition: none !important; */
 	position: static !important;
-	/* height: 1400px !important; */
+	height: 648px !important;
 }
