--- a/public/style.css
+++ b/public/style.css
@@ -20,4 +20,5 @@
 .zenHeroCarousel-module_zenContainer__3ymmy,
 .zenHeroCarousel-module_imageCoverSlide__PwMtc {
 	max-height: 100% !important;
+	border: solid red 12px;
 }
