--- a/public/style.css
+++ b/public/style.css
@@ -20,5 +20,8 @@
 .zenHeroCarousel-module_zenContainer__3ymmy,
 .zenHeroCarousel-module_imageCoverSlide__PwMtc {
 	max-height: 100% !important;
-	border: solid red 12px;
+}
+
+.carousel .slide img {
+	max-height: 100% !important;
 }
