--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,8 @@
 .carousel .slide img {
 	max-height: 100% !important;
 	position: absolute;
+	top: 0;
+	left: 0;
 	width: auto;
 	transform: translate(-50%);
 }
