--- a/public/style.css
+++ b/public/style.css
@@ -29,3 +29,7 @@
 .crossFadeCarousel-module_zenContainerscrol__22UId .crossFadeCarousel-module_unOrderList__7vxDU li span {
 	height: 648px !important;
 }
+
+.zenHeroCarousel-module_zenContainer__3ymmy .zenHeroCarousel-module_imageCoverScroll__2Ap_8 {
+	height: 648px !important;
+}
