--- a/public/style.css
+++ b/public/style.css
@@ -32,4 +32,5 @@
 
 .zenHeroCarousel-module_zenContainer__3ymmy .zenHeroCarousel-module_imageCoverScroll__2Ap_8 {
 	height: 648px !important;
+	background-size: cover;
 }
