--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,11 @@
 	height: 648px !important;
 }
 
+.scrollCarousel-module_zenContainerscroll__2eH5u .scrollCarousel-module_zenContainerscrollCarousel__1NPbW {
+	height: 648px !important;
+	width: 100% !important;
+}
+
 .scrollCarousel-module_zenContainerscroll__2eH5u .scrollCarousel-module_zenContainerscrollCarousel__1NPbW .scrollCarousel-module_children__3PZSS {
 	display: block !important;
 }
