--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,6 @@
 
 .zenHeroCarousel-module_zenContainer__3ymmy .zenHeroCarousel-module_imageCoverScroll__2Ap_8 {
 	height: 648px !important;
-	background-size: 100% auto;
-	background-position: center;
+	background-size: 100%;
+	background-position: center !important;
 }
