--- a/public/style.css
+++ b/public/style.css
@@ -42,5 +42,5 @@
 .zenHeroCarousel-module_zenContainer__3ymmy .zenHeroCarousel-module_imageCoverScroll__2Ap_8 {
 	height: 648px !important;
 	background-size: 1440px 2261px;
-	background-position: center;
+	background-position: 50% !important;
 }
