remove desktop-only styles

--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,6 @@
 
 .zenHeroCarousel-module_zenContainer__3ymmy .zenHeroCarousel-module_imageCoverScroll__2Ap_8 {
 	height: 648px !important;
-	background-size: 1440px 2261px;
-	background-position: 50% !important;
+	/* background-size: 1440px 2261px;
+	background-position: 50% !important; */
 }
